--- a/style.css
+++ b/style.css
@@ -66,15 +66,23 @@ body {
 
 
 /* Small devices (portrait tablets and large phones, 600px and up) */
- /* @media only screen and (min-width: 600px) {
-  /* .jumbotron .card{
+ @media only screen and (min-width: 600px) {
+ }
+ .jumbotron .card{
   width: 80%;
   text-align: center;
+  /* position: absolute; */
   display: block;
-  margin-left: auto;
-  margin-right: auto;
-}   */
-
+  height: auto;
+  /* margin-left: 0rem; */
+} 
+.jumbotron .profil{
+  width: 80%;
+  display: block;
+  text-align: center;
+  /* margin-right: 3rem; */
+  color: rgb(255, 255, 255);
+}
 
 /* Medium devices (landscape tablets, 768px and up) */
 @media only screen and (min-width: 768px) {
